Fixed nav bar — the buttons align!!

--- a/client/stylesheets/Jarvis.css
+++ b/client/stylesheets/Jarvis.css
@@ -175,7 +175,7 @@ button#btn-dark {
 }
 
 /* Navigation */
-/*nav#nav {
+nav#nav {
     background-color: #fff;
     width: 100%;
     box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .15);
@@ -187,7 +187,7 @@ button#btn-dark {
 .nav > li > a:hover, .nav > li > a:focus {
 	background-color: transparent;
 }
-*/
+
 img#nav-logo {
 	height: 20px;
 	width: 71px;
@@ -198,11 +198,11 @@ img#back-arrow {
 	width: 27px;
 }
 
-.navbar-header {
+/*.navbar-header {
 	float: left;
 	text-align: center;
-	/*width: 100%;*/
-}
+	width: 100%;
+}*/
 
 .navbar-brand {
 	float: none;
@@ -212,8 +212,7 @@ img#back-arrow {
     top: 0;
     text-align: center;
 }
-/*
-nav#nav ul.nav.navbar-nav.navbar-left {
-	margin: 0;
-	padding: 0;
-}*/
+
+li#back {
+  position: absolute;
+}
